@@ -13,7 +13,7 @@
     <tr><td>dir 1200 Pensylvania Ave, Washington, DC to 1 Duvall St, Key West, FL</td></tr>
    </table>
   </description>
-  <category>Functions</category>
+  <category>Travel</category>
   <link>http://www.mapquest.com</link>
   <contributor>Peter Heath</contributor>
   
