@@ -7,7 +7,7 @@
   		<tr><td>hsw jet engines</td></tr>
   	</table>
   </description>
-  <category>Other</category>
+  <category>Reference</category>
   <link>http://www.howstuffworks.com/</link>
   <contributor>John W. Bairen, Jr.</contributor>
   
